Another large batch of updates: + Worked on operators to have them coerce operands + Fixed up issuse with static properties (particularly static symbols) + Nailed down slots, including iterable slots + Got descriptors working (read+write) + Other misc minor changes

--- a/runtime/proto/Generator.ejs
+++ b/runtime/proto/Generator.ejs
@@ -147,6 +147,10 @@ function GeneratorHandleDelegate(generator, method, arg) {
 	}
 }
 
+GeneratorProto.Iterator = CreateFunction(undefined, function() {
+	return this;
+});
+
 function GeneratorContext() {
 	this.reset();
 }
