--- a/runtime/proto/Slot.ejs
+++ b/runtime/proto/Slot.ejs
@@ -1,22 +1,23 @@
-function CreateSlot(proto, value) {
+function CreateSlot(proto, value, rest) {
 	var obj;
 	if (proto === undefined)
 		proto = SlotProto;
 	if (!IsObject(proto))
 		throw new TypeError('Object expected');
 	obj = CreateObject(proto);
-	SlotInit(obj, value);
+	SlotInit(obj, value, rest);
 	return obj;
 }
 
-function SlotInit(obj, value) {
+function SlotInit(obj, value, rest) {
 	if (value === undefined)
 		value = null;
-	else if (value !== null && !(IsObject(value) && 'RangeFrom' in value)) {
+	else if (value !== null && !(IsObject(value) && 'Iterator' in value)) {
 		value = ToNumber(value);
 		// This check is because `(-0) | 0` is `+0`
 		if (value != 0)
 			value = value | 0;
 	}
 	obj.Slot = value;
+	obj.RestSlot = rest;
 }
