--- a/runtime/proto/Function.ejs
+++ b/runtime/proto/Function.ejs
@@ -49,23 +49,39 @@ function GetFunction(F) {
 	return f;
 }
 
-function CallMethod(obj, prop, args) {
-	var P, F;
+function CallMethod(obj, key, args) {
+	var K, F;
 	if (!IsObject(obj))
 		throw new TypeError('Object expected');
-	P = ToString(prop);
-	F = Get(obj, P);
+	if (IsWrapper(key)) {
+		if ('Get' in key)
+			return Call(key.Get(obj), obj, args);
+		else
+			throw new Error(
+				'Object cannot be used as a property key in get operation'
+			);
+	}
+	K = ToString(key);
+	F = Get(obj, K);
 	return Call(F, obj, args);
 }
 
-function CallOwnMethod(obj, prop, args) {
-	var P;
+function CallOwnMethod(obj, key, args) {
+	var K;
 	if (!IsObject(obj))
 		throw new TypeError('Object expected');
-	P = ToString(prop);
+	if (IsWrapper(key)) {
+		if ('Get' in key)
+			return Call(key.Get(obj), obj, args);
+		else
+			throw new Error(
+				'Object cannot be used as a property key in get operation'
+			);
+	}
+	K = ToString(key);
 	if (!hasOwn(obj, P))
-		throw new TypeError('Object has no method "' + P + '"');
-	return CallMethod(obj, P, args);
+		throw new TypeError('Object has no method "' + K + '"');
+	return CallMethod(obj, K, args);
 }
 
 function Bind(obj, receiver) {
@@ -105,8 +121,8 @@ function PartiallyApply(f, appliedArgs) {
 			unusedIndices[i] = true;
 		unusedIndices.length = arguments.length;
 		unusedCollapsed.length = 0;
-		// First pass: Replace slots that are explicit indices and note which
-		// ones have been used.
+		// First pass: Replace slots that are explicit indices (including
+		// iterator slots) and note which ones have been used.
 		for (i = 0; i < appliedArgs.length; i++) {
 			arg = appliedArgs[i];
 			if (IsWrapper(arg) && 'Slot' in arg) {
@@ -117,10 +133,17 @@ function PartiallyApply(f, appliedArgs) {
 					unusedIndices[slot] = false;
 					push(args, arguments[slot]);
 				}
-				else if (slot === null || IsObject(slot) && 'RangeFrom' in slot)
+				else if (slot != null && IsObject(slot) && Has(slot, $iterator)) {
+					insert = PartiallApplyIterable(
+						slot, arguments, unusedIndices
+					);
+					spliceAll(args, i, 1, insert);
+					i += insert.length - 1;
+				}
+				else if (slot === null)
 					push(args, arg);
 				else
-					throw new Error('Invalid slot value');
+					throw new Error('Unexpected slot value');
 			}
 			else
 				push(args, arg);
@@ -134,46 +157,50 @@ function PartiallyApply(f, appliedArgs) {
 			arg = args[i];
 			if (IsWrapper(arg) && 'Slot' in arg) {
 				slot = arg.Slot;
-				if (slot === null) {
+				if (slot === null && !arg.RestSlot) {
 					j = shift(unusedCollapsed);
 					args[i] = arguments[j];
 					unusedIndices[j] = false;
 				}
-				else if (!IsObject(slot) || !('RangeFrom' in slot))
+				else if (!arg.RestSlot)
 					throw new Error('Unexpected slot value');
 			}
 		}
-		// Fill in range slots
+		// Third pass: Fill in rest slots
 		for (i = 0; i < args.length; i++) {
 			arg = args[i];
 			if (IsWrapper(arg) && 'Slot' in arg) {
-				insert = PartiallyApplyRange(
-					arg.Slot, arguments, unusedIndices
-				);
+				slot = arg.Slot;
+				if (slot !== null || !arg.RestSlot)
+					throw new Error('Unexpected slot value');
+				insert = PartiallyApplyRest(unusedCollapsed, arguments);
 				spliceAll(args, i, 1, insert);
 				i += insert.length - 1;
 			}
 		}
 		Call(f, this, slice(args));
 	}, appliedArgs.length);
-	// TODO: Enforce only one rest slot permitted (in parser)
 }
 
-function PartiallyApplyRange(range, args, unusedIndices) {
-	var insert = create(null),
-		// It's okay that from and to are coerced to integers because it can
-		// still simulate an iteratable where each value that is produced by
-		// the iterable is 
-		from = ToIndex(range.RangeFrom, args.length),
-		to = ToIndex(range.RangeTo, args.length),
-		i, L;
-	insert.length = 0;
-	from = min(max(from, 0), args.length);
-	to = min(max(to, 0), args.length);
-	for (i = from; from < to ? i < to : i > to; from < to ? i++ : i--)
-		if (unusedIndices[i]) {
-			push(insert, args[i]);
-			unusedIndices[i] = false;
-		}
+function PartiallyApplyRest(unusedIndices, args) {
+	var insert = create(null);
+	insert.length = unusedIndices.length;
+	for (var i = 0; i < unusedIndices.length; i++)
+		insert[i] = args[unusedIndices[i]];
 	return insert;
+}
+
+function PartiallApplyIterable(iterable, args, unusedIndices) {
+	var iter = GetIterator(iterable),
+		insert = create(null),
+		index, next;
+	insert.length = 0;
+	while (true) {
+		next = IteratorStep(iter);
+		if (next === false)
+			return insert;
+		index = ToIndex(IteratorValue(next), args.length);
+		push(insert, args[index]);
+		unusedIndices[index] = false;
+	}
 }
