Updates to unary and binary operators: + Added `is` and `!is` operators + Changed `==` and `!=` operators to be strict equality (removed `===` and `!==`) + Added `~=` and `!~=` operators for "comparative equality" (using @toComparison) + Added `^` and `^=` operators for powers. + Added `!like` binary operator + Fixed several binary and unary operators to explicitly coerce operands

--- a/runtime/proto/Number.ejs
+++ b/runtime/proto/Number.ejs
@@ -73,3 +73,9 @@ function sign(argument) {
 	else
 		throw new Error('Unexpected value');
 }
+
+function Pow(left, right) {
+	left = ToNumber(left);
+	right = ToNumber(right);
+	return pow(left, right);
+}
